Small change to discussion

--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -485,7 +485,7 @@ These model are therefore available for the estimation of density of a number of
 
 Importantly the methods are noninvasive and do not require human marking (as required for mark-recapture models). This makes them suitable for large, continuous monitoring projects with limited human resources. It also makes them suitable for sensitive species or species that are difficult or dangerous to catch.
 
-From our simulations  we believe that this method will produce accurate and precise estimates for many different species. When Choosing detectors a recanter should pick the detector with the largest radius and detection angle possible, but whilst a small capture area may reduce precision these only occur for a small impact on the overall precision of the model (Figure~\ref{f:Cameras}). This method will also produce accurate estimate regardless of the density of the animals in the simulation, with only small changes in the precision of the models (Figure~\ref{f:Density}). The length of time a study must be run for that an accurate result is produced is dependent on the speed of the animal (Figure~\ref{f:Distance}). Whilst the precision does incase with the length of the study we would recommended the study last for long enough for the average animal to have travelled 50kms, and the study to have at least 200 independent captures.   
+From our simulations  we believe that this method will produce accurate and precise estimates for many different species, using both camera and acoustic detectors. When choosing detectors a recanter should pick the detector with the largest radius and detection angle possible, but whilst a small capture area may reduce precision there is only a limited impact on the overall precision of the model (Figure~\ref{f:Cameras}). This method will also produce accurate estimate regardless of the density of the animals in the simulation, with only small changes in the precision of the models (Figure~\ref{f:Density}). The length of time a study must be run for that an accurate result is produced is dependent on the speed of the animal (Figure~\ref{f:Distance}). Whilst the precision does incase with the length of the study we would recommended the study last for long enough for the average animal to have travelled 50kms, and the study to have at least 200 independent captures.   
 
 Although we have used simulations to validate these models, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted. Note, however, that the gas model and model of \cite{rowcliffe2008estimating} have been been field tested and many of the assumptions between these models and those derived here are the same. As the utility of the models is that they can be used with taxa that are difficult to study with other methods, there are not many obvious groups that have reliable, gold standard estimates of density from other methods that could then be used to validate these models.
 
