Changed to compass point notation. Changed figures.

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -44,6 +44,14 @@ url = {http://www.sympy.org},
   publisher={Wiley Online Library}
 }
 
+@article{rovero2013camera,
+  title={" Which camera trap type and how many do I need?" A review of camera features and study designs for a range of wildlife research applications.},
+  author={Rovero, Francesco and Zimmermann, Fridolin and Berzi, Duccio and Meek, Paul},
+  journal={Hystrix},
+  year={2013}
+}
+
+
 @article{gese2001monitoring,
   title={Monitoring of terrestrial carnivore populations},
   author={Gese, Eric M},
