--- a/supplementary-material/REM-methods.tex
+++ b/supplementary-material/REM-methods.tex
@@ -211,7 +211,7 @@ Model p223 is bound by $\alpha \le 4\pi - 2\theta$, $\alpha \ge \pi$ and $\theta
         \begin{subfigure}[t]{0.3\textwidth}
                 \centering
                 \begin{tikzpicture}[scale=0.38]
-        	\fill[opacity=\o, sensCol] (0, \lwr) rectangle ({\r}, \upr);       
+        	\fill[opacity=\opac, sensCol] (0, \lwr) rectangle ({\r}, \upr);       
         	\directionArrowOne{0}{220}{200};
 		\draw[profile]     (0,0)  -- (0:\r);
 		\fill[ focus]  (180 - 220/2 - 200:\r) ++ (- 220/2 - 220:2*\angRad) arc (- 220/2 - 220:-360-90:2*\angRad) -- (180 - 220/2 - 200:\r) -- cycle;
