--- a/tikzREMmethods.tex
+++ b/tikzREMmethods.tex
@@ -1,7 +1,8 @@
 \usepackage{etoolbox}
 
 \def\r{4}
-\def\o{0.2}
+
+\def\opac{0.2}
 \def\lwr{-1.3*\r}
 \def\upr{1.3*\r}
 \def\gap{0.2}
@@ -30,7 +31,7 @@
 	}{
 		\pgfmathsetmacro{\width}{\r};	
 	} 
-        \fill[opacity=\o, callCol] (-{\width}, \lwr) rectangle ({\width}, \upr);       
+        \fill[opacity=\opac, callCol] (-{\width}, \lwr) rectangle ({\width}, \upr);       
 }
 
 \newcommand{\profileOne}[2]{ % sensor width, x1
@@ -69,7 +70,7 @@
 	}{
 		\pgfmathsetmacro{\leftProf}{\r};
 	}
-        \fill[opacity=\o, sensCol] (-\leftProf, \lwr) rectangle ({\r}, \upr);       
+        \fill[opacity=\opac, sensCol] (-\leftProf, \lwr) rectangle ({\r}, \upr);       
 }
 
 \newcommand{\segmentOne}[2]{ % sensor width, x1
@@ -109,7 +110,7 @@
 
 
 \newcommand{\sensorTwo}[2]{ % sensorAngle, x2
-        \fill[opacity=\o, sensCol] ({\r*cos(#1/2 + #2)}, \lwr) rectangle ({\r*cos(#2 - #1/2)}, \upr);       
+        \fill[opacity=\opac, sensCol] ({\r*cos(#1/2 + #2)}, \lwr) rectangle ({\r*cos(#2 - #1/2)}, \upr);       
 }
 
 \newcommand{\segmentTwo}[2]{ % sensor width, x2
@@ -137,7 +138,7 @@
 }
 
 \newcommand{\sensorThree}[2]{ % sensorAngle, x3
-        \fill[opacity=\o, sensCol] (0, \lwr) rectangle ({\r*sin(#2)}, \upr);       
+        \fill[opacity=\opac, sensCol] (0, \lwr) rectangle ({\r*sin(#2)}, \upr);       
 }
 
 \newcommand{\segmentThree}[2]{ % sensorAngle, x3
@@ -205,7 +206,7 @@
 				\pgfmathsetmacro{\leftPoi}{0};
 			}
 	}
-        \fill[opacity=\o, sensCol] (\leftPoi, \lwr) rectangle ({\r}, \upr);       
+        \fill[opacity=\opac, sensCol] (\leftPoi, \lwr) rectangle ({\r}, \upr);       
 }
 
 \newcommand{\segmentFour}[2]{ % sensor width, x4
