--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,48 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-05-16 13:37:25 +0100 
+%% Created for Elizabeth Moorcroft at 2014-05-16 18:02:15 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{yack2013passive,
+	Author = {Yack, Tina M and Barlow, Jay and Calambokidis, John and Southall, Brandon and Coates, Shannon},
+	Date-Added = {2014-05-16 13:45:30 +0000},
+	Date-Modified = {2014-05-16 13:45:30 +0000},
+	Journal = {The Journal of the Acoustical Society of America},
+	Number = {3},
+	Pages = {2589--2595},
+	Publisher = {Acoustical Society of America},
+	Title = {Passive acoustic monitoring using a towed hydrophone array results in identification of a previously unknown beaked whale habitat},
+	Volume = {134},
+	Year = {2013}}
+
+@article{zero2013monitoring,
+	Author = {Zero, Victoria H and Sundaresan, Siva R and O'Brien, Timothy G and Kinnaird, Margaret F},
+	Date-Added = {2014-05-16 12:54:00 +0000},
+	Date-Modified = {2014-05-16 12:54:00 +0000},
+	Journal = {Oryx},
+	Number = {03},
+	Pages = {410--419},
+	Publisher = {Cambridge Univ Press},
+	Title = {Monitoring an Endangered savannah ungulate, Grevy's zebra Equus grevyi: choosing a method for estimating population densities},
+	Volume = {47},
+	Year = {2013}}
+
+@article{rovero2009camera,
+	Author = {Rovero, Francesco and Marshall, Andrew R},
+	Date-Added = {2014-05-16 12:52:25 +0000},
+	Date-Modified = {2014-05-16 12:52:25 +0000},
+	Journal = {Journal of Applied Ecology},
+	Number = {5},
+	Pages = {1011--1017},
+	Publisher = {Wiley Online Library},
+	Title = {Camera trapping photographic rate as an index of density in forest ungulates},
+	Volume = {46},
+	Year = {2009}}
 
 @article{marques2009estimating,
 	Author = {Marques, Tiago A and Thomas, Len and Ward, Jessica and DiMarzio, Nancy and Tyack, Peter L},
@@ -3625,16 +3661,6 @@ The seasonal movements of Eidolon helvum, Myonycteris torquata, and Nanonycteris
 	Publisher = {Springer},
 	Title = {Epidemiology of Henipavirus Disease in Humans},
 	Year = {2012}}
-
-@article{field2011hendra,
-	Author = {Field, H. and de Jong, C. and Melville, D. and Smith, C. and Smith, I. and Broos, A. and Kung, Y.H.N. and McLaughlin, A. and Zeddeman, A.},
-	Journal = {PloS one},
-	Number = {12},
-	Pages = {e28678},
-	Publisher = {Public Library of Science},
-	Title = {Hendra virus infection dynamics in {Australian} fruit bats},
-	Volume = {6},
-	Year = {2011}}
 
 @article{chan2001complete,
 	Author = {Chan, YP and Chua, KB and Koh, CL and Lim, ME and Lam, SK},
