small change to text

--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -88,7 +88,7 @@ marcus.rowcliffe@ioz.ac.uk
 \subsection*{3:} The new models can be used to estimate animal density from surveys with any combination of sensor detection angle and call directionality. We find that the models give an unbiased estimate of density. The precision of the estimate increases the number of captures during the survey which is influenced by including detection zone and length of survey, the speed and density of animal. We found that for highly precise estimates at least XX%%
  number of captures is necessary.
 
-\subsection*{4:} We conclude that these models provide an effective method to estimate animal density from sensor count data. We anticipate that surveys of acoustically detected? species, or camera trap surveys, which before could only give relative metrics of population size will now be able to estimate population density controlling for detectability.   As sensors such as camera traps and acoustic detectors become cheaper and more practical these models will be increasingly useful for monitoring animal populations across broad spatial, temporal or taxonomic scales.
+\subsection*{4:} We conclude that these models provide an effective method to estimate animal density from sensor count data. We anticipate that surveys of acoustically detected species, or camera trap surveys, which before could only give relative metrics of population size will now be able to estimate population density controlling for detectability.   As sensors such as camera traps and acoustic detectors become cheaper and more practical these models will be increasingly useful for monitoring animal populations across broad spatial, temporal or taxonomic scales.
 
 \subsection{Keywords}
 Acoustic detection, animal density, random encounter model, bat detector.
