No of captures graph added

--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -329,7 +329,7 @@ None of the estimated densities from the simulation showed significant deviation
 	~
 	 \begin{subfigure}[t]{0.5\textwidth}
                 \centering
-		\includegraphics[width=1\textwidth]{imgs/Results_NoCaptures.pdf}
+		\includegraphics[width=1\textwidth]{imgs/ResultsNoCaptures.pdf}
                 \caption{Number of captures}
                 \label{f:Captures}
         \end{subfigure}
